31-01-25/Commands.txt
test> show dbs
admin   40.00 KiB
config  60.00 KiB
local   40.00 KiB
test> use local
switched to db local
local> use admin
switched to db admin
admin> use demodb
switched to db demodb
demodb> show dbs
admin   40.00 KiB
config  60.00 KiB
local   40.00 KiB
demodb> show collections

demodb> db.Employee.insert({'name' : 'Raju', 'age' : 25});
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
{
  acknowledged: true,
  insertedIds: { '0': ObjectId('679c93c176d1ce94f4cb0ce2') }
}
demodb> db.Employee.insertOne({'name' : 'Manju', 'age' : 35});
{
  acknowledged: true,
  insertedId: ObjectId('679c93d376d1ce94f4cb0ce3')
}
demodb> show collections
Employee
demodb> db.Employee.find()
[
  { _id: ObjectId('679c93c176d1ce94f4cb0ce2'), name: 'Raju', age: 25 },
  { _id: ObjectId('679c93d376d1ce94f4cb0ce3'), name: 'Manju', age: 35 }
]
demodb> db.Employee.insertOne({'name' : 'Suman', 'age' : 45, 'salary' : 90000, 'designation' : 'Manager'});
{
  acknowledged: true,
  insertedId: ObjectId('679c946676d1ce94f4cb0ce4')
}
demodb> db.Employee.find()
[
  { _id: ObjectId('679c93c176d1ce94f4cb0ce2'), name: 'Raju', age: 25 },
  { _id: ObjectId('679c93d376d1ce94f4cb0ce3'), name: 'Manju', age: 35 },
  {
    _id: ObjectId('679c946676d1ce94f4cb0ce4'),
    name: 'Suman',
    age: 45,
    salary: 90000,
    designation: 'Manager'
  }
]
demodb> db.Employee.insertOne({'name' : 'Sanju', 'age' : 21, 'salary' : 60000, 'designation' : 'Programmar'});
{
  acknowledged: true,
  insertedId: ObjectId('679c949d76d1ce94f4cb0ce5')
}
demodb> db.Employee.insertOne({'name' : 'Tanushree', 'age' : 31, 'salary' : 40000, 'designation' : 'Tester'});
{
  acknowledged: true,
  insertedId: ObjectId('679c94bf76d1ce94f4cb0ce6')
}
demodb> db.Employee.find()
[
  { _id: ObjectId('679c93c176d1ce94f4cb0ce2'), name: 'Raju', age: 25 },
  { _id: ObjectId('679c93d376d1ce94f4cb0ce3'), name: 'Manju', age: 35 },
  {
    _id: ObjectId('679c946676d1ce94f4cb0ce4'),
    name: 'Suman',
    age: 45,
    salary: 90000,
    designation: 'Manager'
  },
  {
    _id: ObjectId('679c949d76d1ce94f4cb0ce5'),
    name: 'Sanju',
    age: 21,
    salary: 60000,
    designation: 'Programmar'
  },
  {
    _id: ObjectId('679c94bf76d1ce94f4cb0ce6'),
    name: 'Tanushree',
    age: 31,
    salary: 40000,
    designation: 'Tester'
  }
]
demodb> show dbs
admin   40.00 KiB
config  92.00 KiB
demodb  72.00 KiB
local   40.00 KiB
demodb> db.Employee.find({'designation' : 'tester'})

demodb> db.Employee.find({'designation' : 'Tester'})
[
  {
    _id: ObjectId('679c94bf76d1ce94f4cb0ce6'),
    name: 'Tanushree',
    age: 31,
    salary: 40000,
    designation: 'Tester'
  }
]
demodb> db.Employee.find({'age' : {$lt : 35} })
[
  { _id: ObjectId('679c93c176d1ce94f4cb0ce2'), name: 'Raju', age: 25 },
  {
    _id: ObjectId('679c949d76d1ce94f4cb0ce5'),
    name: 'Sanju',
    age: 21,
    salary: 60000,
    designation: 'Programmar'
  },
  {
    _id: ObjectId('679c94bf76d1ce94f4cb0ce6'),
    name: 'Tanushree',
    age: 31,
    salary: 40000,
    designation: 'Tester'
  }
]
demodb> db.Employee.find({'age' : {$gt : 35} })
[
  {
    _id: ObjectId('679c946676d1ce94f4cb0ce4'),
    name: 'Suman',
    age: 45,
    salary: 90000,
    designation: 'Manager'
  }
]
demodb> db.Employee.find({'age' : {$gte : 35} })
[
  { _id: ObjectId('679c93d376d1ce94f4cb0ce3'), name: 'Manju', age: 35 },
  {
    _id: ObjectId('679c946676d1ce94f4cb0ce4'),
    name: 'Suman',
    age: 45,
    salary: 90000,
    designation: 'Manager'
  }
]
demodb> db.Employee.find($or : [{'age' : {$gte : 35}, {'designation' : 'Manager'}])
Uncaught:
SyntaxError: Unexpected token, expected "," (1:21)

> 1 | db.Employee.find($or : [{'age' : {$gte : 35}, {'designation' : 'Manager'}])    |                      ^
  2 |
demodb> db.Employee.find({$or : [{'age' : {$gte : 35}, {'designation' : 'Manager'}]})
Uncaught:
SyntaxError: Unexpected token (1:47)

> 1 | db.Employee.find({$or : [{'age' : {$gte : 35}, {'designation' : 'Manager'}]})
    |                                                ^
  2 |

demodb> db.Employee.find({$or : [{'age' : {$gte : 35}}, {'designation' : 'Manager'}]})
[
  { _id: ObjectId('679c93d376d1ce94f4cb0ce3'), name: 'Manju', age: 35 },
  {
    _id: ObjectId('679c946676d1ce94f4cb0ce4'),
    name: 'Suman',
    age: 45,
    salary: 90000,
    designation: 'Manager'
  }
]
demodb> db.Employee.find({$and : [{'age' : {$gte : 35}}, {'designation' : 'Manager'}]})
[
  {
    _id: ObjectId('679c946676d1ce94f4cb0ce4'),
    name: 'Suman',
    age: 45,
    salary: 90000,
    designation: 'Manager'
  }
]
demodb> db.Employee.update({'name' : 'Tanushree'}, {$set : {'salary' : 50000}})
DeprecationWarning: Collection.update() is deprecated. Use updateOne, updateMany, or bulkWrite.
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
demodb> db.Employee.updateOne({'name' : 'Tanushree'}, {$set : {'salary' : 50000}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 0,
  upsertedCount: 0
}
demodb> db.Employee.find()
[
  { _id: ObjectId('679c93c176d1ce94f4cb0ce2'), name: 'Raju', age: 25 },
  { _id: ObjectId('679c93d376d1ce94f4cb0ce3'), name: 'Manju', age: 35 },
  {
    _id: ObjectId('679c946676d1ce94f4cb0ce4'),
    name: 'Suman',
    age: 45,
    salary: 90000,
    designation: 'Manager'
  },
  {
    _id: ObjectId('679c949d76d1ce94f4cb0ce5'),
    name: 'Sanju',
    age: 21,
    salary: 60000,
    designation: 'Programmar'
  },
  {
    _id: ObjectId('679c94bf76d1ce94f4cb0ce6'),
    name: 'Tanushree',
    age: 31,
    salary: 50000,
    designation: 'Tester'
  }
]
demodb> db.find({}, {'name':1, 'age':1, '_id':0})
TypeError: db.find is not a function
demodb> db.Employee.find({}, {'name':1, 'age':1, '_id':0})
[
  { name: 'Raju', age: 25 },
  { name: 'Manju', age: 35 },
  { name: 'Suman', age: 45 },
  { name: 'Sanju', age: 21 },
  { name: 'Tanushree', age: 31 }
]
demodb> db.Employee.find({}, {'name':1, 'age':1, '_id':0}).limit(3)
[
  { name: 'Raju', age: 25 },
  { name: 'Manju', age: 35 },
  { name: 'Suman', age: 45 }
]
demodb> db.Employee.find({}, {'name':1, 'age':1, '_id':0}).skip(3)
[ { name: 'Sanju', age: 21 }, { name: 'Tanushree', age: 31 } ]

demodb> db.Employee.update({'name' : 'Tanushree'}, {$set : {'salary' : 50000}})
DeprecationWarning: Collection.update() is deprecated. Use updateOne, updateMany, or bulkWrite.
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
demodb> db.Employee.updateOne({'name' : 'Tanushree'}, {$set : {'salary' : 50000}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 0,
  upsertedCount: 0
}
